feat(api + web): test regular api webhook
