# airbyte-commons-server/src/main/java/io/airbyte/commons/server/handlers/NotificationsHandler.java
@@ -9,18 +9,25 @@ import static io.airbyte.commons.server.converters.NotificationSettingsConverter
 import io.airbyte.api.model.generated.NotificationRead;
 import io.airbyte.api.model.generated.NotificationRead.StatusEnum;
 import io.airbyte.api.model.generated.NotificationTrigger;
+import io.airbyte.api.model.generated.NotificationType;
 import io.airbyte.api.model.generated.SlackNotificationConfiguration;
 import io.airbyte.commons.server.errors.IdNotFoundKnownException;
+import io.airbyte.notification.ApiNotificationClient;
+import io.airbyte.notification.NotificationClient;
 import io.airbyte.notification.SlackNotificationClient;
 import jakarta.inject.Singleton;
 import java.io.IOException;
 import java.util.Map;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * Handler logic for notificationsApiController.
  */
 @Singleton
 public class NotificationsHandler {
+
+  private static final Logger LOGGER = LoggerFactory.getLogger(AttemptHandler.class);
 
   private static final Map<NotificationTrigger, String> NOTIFICATION_TRIGGER_TEST_MESSAGE = Map.of(
       NotificationTrigger.SYNC_SUCCESS, "Hello World! This is a test from Airbyte to try slack notification settings for sync successes.",
@@ -37,15 +44,30 @@ public class NotificationsHandler {
    * Send a test notification message to the provided webhook.
    */
   public NotificationRead tryNotification(final SlackNotificationConfiguration slackNotificationConfiguration,
-                                          final NotificationTrigger notificationTrigger) {
+                                          final NotificationTrigger notificationTrigger,
+                                          final NotificationType notificationType) {
+    LOGGER.info("hello world");
     final String message = NOTIFICATION_TRIGGER_TEST_MESSAGE.get(notificationTrigger);
+    LOGGER.info("message: " + message);
+    LOGGER.info("notificationType: " + notificationType);
 
     // Try notification for webhook only.
     // TODO(Xiaohan): SlackNotificationClient should be micronauted so we can mock this object and test
     // this function.
-    final SlackNotificationClient notificationClient = new SlackNotificationClient(toConfig(slackNotificationConfiguration));
+    NotificationClient notificationClient;
+    // Notification.NotificationType notificationType = Notification.NotificationType.API;
+
+    if (NotificationType.SLACK.equals(notificationType)) {
+      notificationClient = new SlackNotificationClient(toConfig(slackNotificationConfiguration));
+    } else if (NotificationType.API.equals(notificationType)) {
+      notificationClient =
+          new ApiNotificationClient(new io.airbyte.config.ApiNotificationConfiguration().withWebhook(slackNotificationConfiguration.getWebhook()));
+    } else {
+      return new NotificationRead().status(StatusEnum.FAILED);
+    }
 
     boolean isNotificationSent;
+
     try {
       isNotificationSent = notificationClient.notifyTest(message);
     } catch (final IllegalArgumentException e) {
@@ -53,7 +75,7 @@ public class NotificationsHandler {
     } catch (final IOException | InterruptedException e) {
       return new NotificationRead().status(StatusEnum.FAILED).message(e.getMessage());
     }
-
+    LOGGER.info("isNotificationSent: " + isNotificationSent);
     if (isNotificationSent) {
       return new NotificationRead().status(StatusEnum.SUCCEEDED);
     } else {
